<resources>
    <string name="oder">ชื่อ-สกุล</string>
    <string name="order">คำสั่งงาน</string>
    <string name="name">ผู้กู้ราย</string>
    <string name="name1">ชื่อ-สกุล</string>
    <string name="telephone">เบอร์โทร</string>
    <string name="id_line">ID line</string>
    <string name="email">E-mail</string>
    <string name="contact">สถานที่ติดต่อ</string>
    <string name="home_numbet">บ้านเลขที่</string>
    <string name="project_name">ชื่อโครงการ</string>
    <string name="soi_project">ซอยย่อยโครงการ่</string>
    <string name="public_road">ซอยสาธารณะ</string>
    <string name="road">ถนน</string>
    <string-array name="district">
        <item>คลองท่อม</item>
        <item>ปลายพระยา</item>
        <item>ลำทับ</item>
        <item>อ่าวลึก</item>
        <item>เกาะลันตา</item>
        <item>เขาพนม</item>
        <item>เมืองกระบี่</item>
    </string-array>
    <string name="district1">อำเภอ/เขต</string>
    <string-array name="province">
        <item>กระบี่</item>
        <item>กรุงเทพมหานคร</item>
        <item>กาญจนบุรี</item>
        <item>กาฬสินธุ์</item>
        <item>กำแพงเพชร</item>
        <item>ขอนแก่น</item>
        <item>จันทบุรี</item>
        <item>ฉะเชิงเทรา</item>
        <item>ชลบุรี</item>
        <item>ชัยนาท</item>
        <item>ชัยภูมิ</item>
        <item>ชุมพร</item>
        <item>ตรัง</item>
        <item>ตราด</item>
        <item>ตาก</item>
        <item>นครนายก</item>
        <item>นครปฐม</item>
        <item>นครพนม</item>
        <item>นครราชสีมา</item>
        <item>นครศรีธรรมราช</item>
        <item>นครสวรรค์</item>
        <item>นนทบุรี</item>
        <item>นราธิวาส</item>
        <item>น่าน</item>
        <item>บึงกาฬ</item>
        <item>บุรีรัมย์</item>
        <item>ปทุมธานี</item>
        <item>ประจวบคีรีขันธ์</item>
        <item>ปราจีนบุรี</item>
        <item>ปัตตานี</item>
        <item>พระนครศรีอยุธยา</item>
        <item>พะเยา</item>
        <item>พังงา</item>
        <item>พัทลุง</item>
        <item>พิจิตร</item>
        <item>พิษณุโลก</item>
        <item>ภูเก็ต</item>
        <item>มหาสารคาม</item>
        <item>มุกดาหาร</item>
        <item>ยะลา</item>
        <item>ยโสธร</item>
        <item>ระนอง</item>
        <item>ระยอง</item>
        <item>ราชบุรี</item>
        <item>ร้อยเอ็ด</item>
        <item>ลพบุรี</item>
        <item>ลำปาง</item>
        <item>ลำพูน</item>
        <item>ศรีสะเกษ</item>
        <item>สกลนคร</item>
        <item>สงขลา</item>
        <item>สตูล</item>
        <item>สมุทรปราการ</item>
        <item>สมุทรสงคราม</item>
        <item>สมุทรสาคร</item>
        <item>สระบุรี</item>
        <item>สระแก้ว</item>
        <item>สิงห์บุรี</item>
        <item>สุพรรณบุรี</item>
        <item>สุราษฎร์ธานี</item>
        <item>สุรินทร์</item>
        <item>สุโขทัย</item>
        <item>หนองคาย</item>
        <item>หนองบัวลำภู</item>
        <item>อำนาจเจริญ</item>
        <item>อุดรธานี</item>
        <item>อุตรดิตถ์</item>
        <item>อุทัยธานี</item>
        <item>อุบลราชธานี</item>
        <item>อ่างทอง</item>
        <item>เชียงราย</item>
        <item>เชียงใหม่</item>
        <item>เพชรบุรี</item>
        <item>เพชรบูรณ์</item>
        <item>เลย</item>
        <item>แพร่</item>
        <item>แม่ฮ่องสอน</item>
        <item>ประจวบคีรีขันธ์</item>
        <item>ชุมพร</item>
    </string-array>
    <string name="tanon">ถนน</string>
    <string-array name="zip_code">
        <item>81120</item>
        <item>81170</item>
        <item>81160</item>
        <item>81190</item>
        <item>81110</item>
        <item>81120</item>
        <item>81150</item>
        <item>81140</item>
        <item>81000</item>
        <item>81130</item>
    </string-array>
    <string name="recipient">สินเชื่อผู้รับเรื่อง</string>
    <string name="text_name2">ชื่อ-สกุล</string>
    <string name="loan_account_number">เลขที่บัญชีเงินกู้</string>
    <string name="date">วันที่รับเรื่อง</string>
    <string name="campaign">Campaign</string>
    <string name="loan">วงเงินกู้</string>
    <string name="guarantee">หลักประกัน</string>
    <string name="deed_no">โฉนดเลขที่</string>
    <string name="land">เนื้อที่ดิน</string>
    <string name="province1">จังหวัด</string>
    <string name="loan_type">ประเภทเอกเงินกู้</string>
    <string name="evaluation_objectives">วัตถุประสงค์การประเมิน</string>
    <string-array name="activities">
        <item>รับเรื่อง</item>
        <item>นัดหมาย 1</item>
        <item>นัดหมาย 2</item>
        <item>นำชี</item>
    </string-array>
    <string name="operator">ผู้ดำเนินการ</string>
    <string name="Contact_person">ผู้รับการติดต่อ</string>
    <string name="type_doc_title">ประเภทเอกสารสิทธิ์</string>
    <string name="index_doc">เลขที่เอกสารสิทธิ์</string>
    <string name="num_doc">เลขที่ดิน</string>
    <string name="rawang">ระวาง</string>
    <string name="page">หน้าที่</string>
    <string name="area">เนื้อที่ดิน</string>
    <string name="num_titledeed">จำนวนกลุ่ม</string>
    <string name="unit_titledeed">แปลง</string>
    <string-array name="number">
        <item>วิธีหลัก</item>
        <item>วิธีสอบทาน 1</item>
        <item>วิธีสอบทาน 2</item>
    </string-array>
    <string name="number1">ลำดับที่</string>
    <string name="number2">หน้าสำรวจ</string>
    <string name="number3">หน้าที่</string>
    <string name="number4">เล่มที่</string>
    <string name="number5">จำนวนแปลง</string>
    <string name="ekasansit1">เอกสารสิทธิ์ที่ตั้งอาคารชุด</string>
    <string name="not_null">กรอกข้อมูล</string>
    <string name="not_date">เลือกวันที่</string>
    <string-array name="location">
        <item>แผนที่ระวาง</item>
        <item>แปลงคงเหลือ</item>
        <item>วิหมุดหลักเขต</item>
        <item>แผนที่โฉนดเป็นรูปเฉพาะ</item>
        <item>แปลงข้างเคียง</item>
        <item>ไม่สามารถตรวจสอบได้</item>
    </string-array>
    <string name="location1">ที่ตั้งตามเอกสารสิทธิ์</string>
    <string name="location2">จังหวัด</string>
    <string name="location3">อำเภอ</string>
    <string name="location4">ตำบล</string>
    <string name="location5">ที่ตั้งตามเขตการปกครอง</string>
    <string name="location6">หมู่ที่</string>
    <string name="location7">ชื่อหมู่บ้าน</string>
    <string name="location8">รหัสไปรษณีย์</string>
    <string name="location9">ที่ตั้งตามชื่อทำเล</string>
    <string name="location11">ถนนสายหลัก</string>
    <string name="location12">ถนนสายรอง</string>
    <string name="location13">ซอยสาธารณะหลัก</string>
    <string name="location14">ซอยสาธารณะย่อย</string>
    <string name="location15">**ที่ตั้งอยู่ในโครงการจัดสรรหรือไม่**</string>
    <string name="location18">ที่ตั้งตามชื่อทำเล</string>
    <string name="location19">ชื่อโครงการ</string>
    <string name="location20">ซอยหลักโครงการ</string>
    <string name="location21">ซอยย่อยโครงการ</string>
    <string name="kammasit1">กรรมสิทธิ์และภาระผูกพัน</string>
    <string name="kammasit2">รูปแบบกรรมสิทธิ์</string>
    <string name="kammasit3">ผู้ถือกรรมสิทธิ์</string>
    <string name="kammasit4">ภาระหนี้</string>
    <string name="kammasit5">ต้องตรวจสอบหรือไม่</string>
    <string name="kammasit6">ภาระจำนอง</string>
    <string name="kammasit7">ประเภทภาระหนี้</string>
    <string name="kammasit8">เจ้าหนี้จำนอง</string>
    <string name="kammasit9">วงเงินจำนอง</string>
    <string name="kammasit10">ขายฝาก</string>
    <string name="kammasit11">ประเภทภาระหนี้</string>
    <string name="kammasit12">ผู้รับขายฝาก</string>
    <string name="kammasit13">วันกำหนดไถ่ถอน</string>
    <string name="kammasit14">ภาระผูกพันตามเอกสารสิทธิ์</string>
    <string name="kammasit15">ต้องตรวจสอบหรือไม่</string>
    <string name="kammasit16">การตรวจสอบอายัด</string>
    <string name="paraputpun1">ภาระผูกพันตามสภาพทรัพย์สิน</string>
    <string name="pubpung1">ส่วนปรับปรุงที่ดิน</string>
    <string name="pubpung2">ที่ดินพร้อมสิ่งปลูกสร้าง</string>
    <string name="pubpung3">ที่ดินเปล่า</string>
    <string name="pubpung4">ทำเลที่ตั้งแปลง</string>
    <string name="pubpung5">ระดับที่ดิน</string>
    <string name="pubpung6">**ระดับสูงกว่าหรือต่ำกว่าถนนหน้าที่ดิน (+/-เมตร)**</string>
    <string name="pubpung7">พื้นที่ถม</string>
    <string name="pubpung8">ถมแล้ว(กี่%)</string>
    <string name="pubpung9">พื้นที่ถม</string>
    <string name="pubpung10">ยังไม่ถม(กี่%)</string>
    <string name="pubpung11">ผลรวม</string>
    <string name="pubpung12">เฉลี่ย</string>
    <string name="pubpung13">ถมแล้ว</string>
    <string name="pubpung14">ยังไม่ถม</string>
    <string name="pubpung15">พื้นที่ถม</string>
    <string name="pubpung16">ระดับดิน</string>
    <string name="rabob1">ระบบสาธารณูปโภค</string>
    <string name="rabob2">ระบบสาธารณูปโภคพื้นฐาน</string>
    <string name="rabob3">ระบบไฟฟ้า</string>
    <string name="rabob4">ระบบประปา</string>
    <string name="rabob5">ระบบโทรศัพท์พื้นฐาน</string>
    <string name="rabob6">สัญญาณโทรศัพท์เคลื่อนที่</string>
    <string name="rabob7">ท่อระบายน้ำ</string>
    <string name="rabob8">มีไฟฟ้าส่องสว่าง</string>
    <string name="rabob9">ทางเข้าออกไปสู่ที่ดิน</string>
    <string name="rabob10">ถนนสายหลัก</string>
    <string name="rabob11">จุดเริ่มต้น</string>
    <string name="rabob12">ถนนผ่านหน้าที่ดิน</string>
    <string name="rabob13">ถนนสายรอง</string>
    <string name="rabob14">ซอยสาธารณะหลัก</string>
    <string name="rabob15">ซอยสาธารณะย่อย</string>
    <string name="roobrang1">รูปร่างที่ดินและสภาพแวดล้อม</string>
    <string name="roobrang2">สภาพแวดล้อมโดยรอบที่ดิน</string>
    <string name="roobrang3">รูปร่างที่ดิน</string>
    <string name="roobrang4">สถานที่สำคัญใกกล้เคียง(สถานทีอ้างอิงหลักอยู่อันดับแรก)</string>
    <string name="roobrang5">ระยะห่าง</string>
    <string name="roobrang6">เมตร</string>
    <string name="laws1">ข้อกฎหมายที่เกี่ยวข้อง</string>
    <string name="laws2">กฎหมายผังเมือง</string>
    <string name="laws3">กฎหมายผังเมือง</string>
    <string name="laws4">ประเภท ที่อยู่อาศัยหนาแน่นน้อย</string>
    <string name="laws5">ประเภท ที่อยู่อาศัยหนาแน่นปานกลาง</string>
    <string name="laws6">ประเภท ที่อยู่อาศัยหนาแน่นมาก</string>
    <string name="laws7">ประเภท พาณิชยกรรมและที่อยู่อาศัยหนาแน่นมาก</string>
    <string name="laws8">ประเภท อุตสาหกรรมและคลังสินค้า</string>
    <string name="laws9">ประเภท คลังสินค้า</string>
    <string name="laws10">ประเภท อุตสาหกรรมที่ไม่เป็นพิษต่อชุมชนและคลังสินค้า</string>
    <string name="laws11">ประเภท ชนบทและเกษตรกรรม</string>
    <string name="laws12">ประเภท อนุรักษ์ชนบทและเกษตรกรรม</string>
    <string name="laws13">ประเภท ที่โล่งเพื่อนันทนาการและการรักษาคุณภาพสิ่งแวดล้อม</string>
    <string name="laws14">ประเภท ที่โล่งเพื่อนันทนาการและการรักษาคุณภาพสิ่งแวดล้อม</string>
    <string name="laws15">ประเภท สถาบันการศึกษา</string>
    <string name="laws16">ประเภท สถาบันศาสนา</string>
    <string name="laws17">สถาบันราชการ การสาธารณูปโภคและสาธารณูปการ</string>
    <string name="laws18">ประเภท ชุมชนที่อยูอาศัย</string>
    <string name="laws19">บล็อคเลขที่</string>
    <string name="laws20">โครงการเวณคืน</string>
    <string name="laws21">แนวสายไฟฟ้าแรงสูง</string>
    <string name="laws22">แนวรถไฟฟ้าใต้ดิน</string>
    <string name="laws23">เขตป่าไม้</string>
    <string name="laws24">อยู่ในเขตเทศบาล</string>
    <string name="laws25">อื่นๆ</string>
    <string name="check1">การตรวจตำแหน่งที่ดิน</string>
    <string name="check2">ตรวจเอกสารสำนักงานที่ดิน</string>
    <string name="check3">เอกสารที่สำนักงานที่ดิน</string>
    <string name="check4">เอกสารสิทธิ์ฉบับกรมที่ดิน</string>
    <string name="check5">สัญญาขาย</string>
    <string name="check6">สัญญาให้</string>
    <string name="check7">สัญญาจำนอง</string>
    <string name="check8">แผนที่ระวาง</string>
    <string name="check9">*กรณี ตรวจสอบได้</string>
    <string name="check10">การตรวจสอบตำแหน่งที่ดิน</string>
    <string name="check11">แปลงคงเหลือ</string>
    <string name="check12">บันทึกอายัด</string>
    <string name="check13">บันทึกภาระจำยอม</string>
    <string name="location16">ใช่</string>
    <string name="location17">ไม่ใช่</string>
</resources>