<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Toolbar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_land_tab1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <!--Content-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!--From-->
        <LinearLayout
            android:paddingBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Tile ที่ตั้งที่ดิน-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="@dimen/h1"
                android:textStyle="bold" />

            <!--Tile ที่ตั้งที่ดิน-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location1"
                android:textSize="@dimen/h1"
                android:textStyle="bold" />

            <!--จังหวัด-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location2"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--อำเภอ-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location3"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <Spinner
                    android:id="@id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--ตำบล-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location4"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <Spinner
                    android:id="@id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <!--Tile ที่ตั้งที่ดิน-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location5"
                android:textSize="@dimen/h1"
                android:textStyle="bold" />

            <!--จังหวัด-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location2"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <Spinner
                    android:id="@id/spinner4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--อำเภอ-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location3"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <Spinner
                    android:id="@id/spinner5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!--ตำบล-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location4"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <Spinner
                    android:id="@id/spinner6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <!--หมู่ที่-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location6"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <EditText
                    android:id="@+id/EditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/not_null"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColorHint="@color/edit_text" />
            </LinearLayout>

            <!--ชื่อหมู่บ้าน-->z
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location7"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <EditText
                    android:id="@+id/EditText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/not_null"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColorHint="@color/edit_text" />
            </LinearLayout>

            <!--รหัสไปรษณีย์-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location8"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <Spinner
                    android:id="@id/spinner7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <!--Tile ที่ตั้งตามชื่อทำเล-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location9"
                android:textSize="@dimen/h1"
                android:textStyle="bold" />

            <!--ถนนสายหลัก-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location11"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <EditText
                    android:id="@+id/EditText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/not_null"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColorHint="@color/edit_text" />
            </LinearLayout>

            <!--ถนนสายรอง-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location12"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <EditText
                    android:id="@+id/EditText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/not_null"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColorHint="@color/edit_text" />
            </LinearLayout>

            <!--ซอยสาธารณะหลัก-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location13"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <EditText
                    android:id="@+id/EditText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/not_null"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColorHint="@color/edit_text" />
            </LinearLayout>

            <!--ซอยสาธารณะย่อย-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location14"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <EditText
                    android:id="@+id/EditText6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/not_null"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColorHint="@color/edit_text" />
            </LinearLayout>

            <!--Tile-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location15"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Select-->
                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location16" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/location17" />
            </LinearLayout>

            <!--Tile ที่ตั้งตามชื่อทำเล-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location18"
                android:textSize="@dimen/h1"
                android:textStyle="bold" />


            <!--ชื่อโครงการ-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location19"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <EditText
                    android:id="@+id/EditText7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/not_null"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColorHint="@color/edit_text" />
            </LinearLayout>

            <!--ซอยหลักโครงการ-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location20"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <EditText
                    android:id="@+id/EditText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/not_null"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColorHint="@color/edit_text" />
            </LinearLayout>

            <!--ซอยย่อยโครงการ-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <!--Tile-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location21"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <!--TextFiled-->
                <EditText
                    android:id="@+id/EditText9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/not_null"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColorHint="@color/edit_text" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
